Home page image spacing fix
Remove max-width causing mobile sizing issues.

--- a/_sass/_pages/_home.scss
+++ b/_sass/_pages/_home.scss
@@ -290,7 +290,7 @@
 
 		img {
 			border: 1px solid $bordercolor;
-			max-width: 366px;
+			width: 100%;
 
 			@include respond($med) {
 				max-width: 100%
